# Property-Tax-Return-Automation

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  RAG_PINECONE_STATUS.md  README.md  SYSTEM_ARCHITECTURE.md  alembic.ini  docker-compose.yml  pyproject.toml  test_openai_embeddings.py  test_pattern_matching.py  test_pinecone.py  test_pinecone_simple.py
app/: __init__.py  config.py  database.py  main.py
app/api/: __init__.py  categorization_analytics.py  routes.py  skill_learning_routes.py  transaction_routes.py  workings_routes.py
app/models/: __init__.py  db_models.py
app/rules/: __init__.py  bank_parsers.yaml  categorization.yaml  loader.py
app/schemas/: __init__.py  documents.py  feedback.py  transactions.py
app/services/: __init__.py  categorization_trace.py  claude_client.py  cleanup_rag_duplicates.py  document_processor.py  embeddings.py  file_handler.py  knowledge_store.py  progress_tracker.py  prompts.py  rag_categorization_integration.py  seed_data.py  seed_rag_knowledge.py  skill_loader.py  tax_rules_service.py  transaction_categorizer.py  transaction_extractor.py  workbook_generator.py  (+2 more)
docs/: PHASE1_COMPLETE_IMPLEMENTATION.md  PHASE2_IMPLEMENTATION_PLAN.md  tool_use_schemas_export.json
migrations/: env.py
resources/: Client Case Study - Halpin & Mensforth  Client Case Study - Lucy Neame  Client Case Study - Ravi Chand  Romulus_Logic_Flow_Complete.md
scripts/: migrate_pinecone.py  reindex_teachings.py  run_tests.sh  test_integration.py  verify_setup.py
tests/: test_document_processor.py  test_manual_checklist.py  test_phase3_integration.py
(+54 files in other folders)
